[package]
name = "sds_parser"
version = "0.1.0"
edition = "2021"
description = "NTFS Security Descriptor Stream ($Secure:$SDS) parser"
homepage = "https://u0041.co/blog/post/5"
repository = "https://github.com/AbdulRhmanAlfaifi/SDSParser-rs"
authors = ["AbdulRhman Alfaifi <@A__ALFAIFI>"]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sds_parser"
path = "src/lib/mod.rs"

[dependencies]
byteorder = "1.3"
serde_json = "1.0"
serde = { version = "1.0.123", features = ["derive"] }
winstructs = { git = "https://github.com/AbdulRhmanAlfaifi/winstructs" }
thiserror = "1.0.30"
clap = "3.1.8"
csv = "1.1.6"